[gd_scene load_steps=8 format=3 uid="uid://c8w5gua4qnj5k"]

[ext_resource type="Script" path="res://Scripts/Precombat.gd" id="1_7cuix"]
[ext_resource type="FontFile" uid="uid://0tvkbhwqas0" path="res://Font/Jersey10-Regular.ttf" id="5_7y40w"]
[ext_resource type="AudioStream" uid="uid://bw2b7bo3uq503" path="res://Sounds/SoundeffectFight.wav" id="5_h61o2"]
[ext_resource type="PackedScene" uid="uid://by4khk4klqv27" path="res://Scenes/transition.tscn" id="7_gys42"]

[sub_resource type="Animation" id="Animation_6qy5i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Creature1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(935, 1344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Creature2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2192, 492)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Creature3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-259, 532)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelFight:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["FIGHT !"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LabelFight:visible_characters")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SoundFight:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SoundFight:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3lvh2"]
resource_name = "precombat_animation"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Creature1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.8, 2, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(965, 1344), Vector2(965, 963), Vector2(965, 746), Vector2(965, 563)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Creature2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.2, 4.4, 4.6, 4.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2192, 563), Vector2(1930, 563), Vector2(1675, 563), Vector2(1480, 563)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Creature3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 3.2, 3.4, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-259, 563), Vector2(50, 563), Vector2(313, 563), Vector2(475, 563)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelFight:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["FIGHT !"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LabelFight:visible_characters")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 7]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SoundFight:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_h61o2")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SoundFight:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.73333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dvicw"]
_data = {
"RESET": SubResource("Animation_6qy5i"),
"precombat_animation": SubResource("Animation_3lvh2")
}

[node name="Precombat" type="Node2D"]
script = ExtResource("1_7cuix")

[node name="GetCreaturesPlayer" type="HTTPRequest" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dvicw")
}

[node name="Creature1" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(935, 1344)

[node name="Creature2" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(2192, 492)

[node name="Creature3" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(-259, 532)

[node name="LabelFight" type="Label" parent="."]
z_index = 5
offset_left = 786.0
offset_top = 38.0
offset_right = 1197.0
offset_bottom = 245.0
theme_override_colors/font_color = Color(1, 1, 0.627451, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_7y40w")
theme_override_font_sizes/font_size = 192
text = "FIGHT !"
visible_characters = 1
visible_ratio = 0.142857

[node name="SoundFight" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Transition" parent="CanvasLayer" instance=ExtResource("7_gys42")]
mouse_filter = 2

[node name="FondBleu" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="FondBleu"]
z_index = 3
offset_left = -3.0
offset_top = 244.0
offset_right = 443.0
offset_bottom = 890.0
color = Color(0.305882, 0.631373, 0.784314, 1)

[node name="ColorRect2" type="ColorRect" parent="FondBleu"]
z_index = 3
offset_left = 427.0
offset_top = 293.0
offset_right = 873.0
offset_bottom = 781.0
color = Color(0.305882, 0.631373, 0.784314, 1)

[node name="ColorRect3" type="ColorRect" parent="FondBleu"]
z_index = 3
offset_left = 866.0
offset_top = 242.0
offset_right = 1320.0
offset_bottom = 942.0
color = Color(0.305882, 0.631373, 0.784314, 1)

[node name="ColorRect4" type="ColorRect" parent="FondBleu"]
z_index = 3
offset_left = 1318.0
offset_top = 290.0
offset_right = 1914.0
offset_bottom = 866.0
color = Color(0.305882, 0.631373, 0.784314, 1)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.16519, 0.0850858, 0.092909, 1)

[connection signal="request_completed" from="GetCreaturesPlayer" to="." method="_on_get_creatures_player_request_completed"]
